part1/1.10/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hashgenerator12-svc
spec:
  type: ClusterIP
  selector:
    app: hashgenerator1-2
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
